Validaciones en gestion productos y correccion en obtenerCatalogo